--- a/index.html
+++ b/index.html
@@ -3,52 +3,471 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TheLightStore - Ламповый магазин</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>TheLightStore - Розовые лампы</title>
+    <style>
+        :root {
+            --main-pink: #ff69b4;
+            --light-pink: #ffb6c1;
+            --bg-pink: #fff0f6;
+            --dark-text: #4a4a4a;
+        }
+
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: 'Arial Rounded MT Bold', Arial, sans-serif;
+            background: var(--bg-pink);
+            color: var(--dark-text);
+        }
+
+        /* Шапка */
+        .header {
+            background: linear-gradient(135deg, var(--main-pink), #ff1493);
+            padding: 1rem;
+            box-shadow: 0 4px 15px rgba(255,105,180,0.2);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .header-content {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo {
+            color: white;
+            font-size: 1.5rem;
+            text-decoration: none;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 2rem;
+            align-items: center;
+        }
+
+        .nav-link {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            transition: opacity 0.3s;
+        }
+
+        .nav-link:hover {
+            opacity: 0.9;
+        }
+
+        .cart-button {
+            background: white;
+            color: var(--main-pink);
+            padding: 0.6rem 1.2rem;
+            border-radius: 15px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: transform 0.3s;
+        }
+
+        .cart-button:hover {
+            transform: translateY(-2px);
+        }
+
+        .cart-count {
+            margin-left: 6px;
+            background: var(--main-pink);
+            color: white;
+            padding: 2px 6px;
+            border-radius: 8px;
+        }
+
+        /* Основной контент */
+        main {
+            margin-top: 80px;
+            padding: 1rem;
+        }
+
+        .products-grid {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 1.5rem;
+        }
+
+        /* Карточка товара */
+        .product-card {
+            background: white;
+            border-radius: 15px;
+            padding: 1rem;
+            transition: transform 0.3s;
+            box-shadow: 0 5px 15px rgba(255,105,180,0.1);
+        }
+
+        .product-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .product-image-link {
+            display: block;
+            text-decoration: none;
+        }
+
+        .product-image {
+            width: 100%;
+            height: 180px;
+            object-fit: contain;
+            margin-bottom: 1rem;
+        }
+
+        .product-info {
+            text-align: center;
+        }
+
+        .product-title {
+            font-size: 0.9rem;
+            color: var(--main-pink);
+            margin-bottom: 0.5rem;
+            min-height: 40px;
+        }
+
+        .product-price {
+            font-size: 1rem;
+            color: var(--main-pink);
+            font-weight: bold;
+            margin-bottom: 1rem;
+        }
+
+        /* Элементы управления корзиной */
+        .cart-controls {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+        }
+
+        .add-to-cart {
+            background: var(--main-pink);
+            color: white;
+            border: none;
+            border-radius: 15px;
+            padding: 0.5rem;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .add-to-cart:hover {
+            background: #ff1493;
+            transform: translateY(-2px);
+        }
+
+        .quantity-container {
+            display: none;
+            justify-content: center;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .quantity-controls {
+            display: flex;
+            align-items: center;
+            background: var(--light-pink);
+            border-radius: 20px;
+            padding: 0.25rem;
+        }
+
+        .quantity-btn {
+            background: none;
+            border: none;
+            color: var(--main-pink);
+            width: 25px;
+            height: 25px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: all 0.3s;
+        }
+
+        .quantity-btn:hover {
+            transform: scale(1.1);
+        }
+
+        .product-count {
+            min-width: 25px;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        /* Подвал */
+        .footer {
+            background: var(--main-pink);
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+    </style>
 </head>
 <body>
     <header class="header">
-        <div class="container">
-            <div class="header__logo">
-                <h1>TheLightStore</h1>
-            </div>
-            <nav class="header__nav">
-                <a href="#" class="active">Главная</a>
-                <a href="cart.html" class="cart-link">
-                    Корзина <span class="cart-count">0</span>
+        <div class="header-content">
+            <a href="index.html" class="logo">TheLightStore</a>
+            <nav class="nav-links">
+                <a href="index.html" class="nav-link">Главная</a>
+                <a href="cart.html" class="cart-button">
+                    🛍️ Корзина <span class="cart-count">0</span>
                 </a>
             </nav>
         </div>
     </header>
 
-    <main class="main">
-        <div class="container">
-            <section class="products-grid">
-                <!-- Карточка товара 1 -->
-                <article class="product-card">
-                    <div class="product-card__image">
-                        <img src="img/lamp1.jpg" alt="Лампа накаливания">
-                    </div>
-                    <div class="product-card__info">
-                        <h3>Лампа накаливания</h3>
-                        <p class="product-power">30W</p>
-                        <p class="product-price">120 руб./шт</p>
-                        <button class="btn-add-to-cart">В корзину</button>
-                    </div>
-                </article>
-
-                <!-- Остальные товары -->
-                <!-- ... -->
-            </section>
-        </div>
+    <main>
+        <div class="products-grid" id="products-container"></div>
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <p>© 2025 TheLightStore. Все права защищены.</p>
-        </div>
+        <p>© 2024 TheLightStore. Все права защищены</p>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script>
+        // Данные товаров
+        const products = [
+            {
+                id: 1,
+                name: "Лампа накаливания 30W",
+                price: 120,
+                image: "lamp1.png",
+                description: "Классическая лампа накаливания с теплым светом. Мощность 30W, цоколь E27."
+            },
+            {
+                id: 2,
+                name: "Светодиодная лампа CoolDay",
+                price: 80,
+                image: "lamp2.png",
+                description: "Энергосберегающая LED-лампа холодного белого света. 5000K, 8W."
+            },
+            {
+                id: 3,
+                name: "Лампа LED",
+                price: 90,
+                image: "lamp3.png",
+                description: "Винтажная нить накаливания в стиле Эдисона. Создает уютную атмосферу."
+            },
+            {
+                id: 4,
+                name: "Умная лампа SmartLight",
+                price: 1490,
+                image: "lamp4.png",
+                description: "Управляется через Wi-Fi, 16 млн цветов, регулировка яркости."
+            },
+            {
+                id: 5,
+                name: "Галогенная лампа PRO",
+                price: 430,
+                image: "lamp5.png",
+                description: "Яркий направленный свет для точечных светильников. 50W."
+            },
+            {
+                id: 6,
+                name: "Лампа-шар Crystal",
+                price: 890,
+                image: "lamp6.png",
+                description: "Сферический дизайн с хрустальным эффектом рассеивания."
+            },
+            {
+                id: 7,
+                name: "Лампа для растений FloraGrow",
+                price: 2450,
+                image: "lamp7.png",
+                description: "Специальный спектр для роста растений, 36W."
+            },
+            {
+                id: 8,
+                name: "Переносная лампа Camping",
+                price: 1320,
+                image: "lamp8.png",
+                description: "Водонепроницаемая, с USB-зарядкой. Идеальна для кемпинга."
+            },
+            {
+                id: 9,
+                name: "Лампа-ночник MoonLight",
+                price: 570,
+                image: "lamp9.png",
+                description: "Мягкий рассеянный свет с сенсорным управлением."
+            },
+            {
+                id: 10,
+                name: "Промышленный светильник Loft",
+                price: 3200,
+                image: "lamp10.png",
+                description: "Металлический дизайн в стиле лофт, мощность 60W."
+            },
+            {
+                id: 11,
+                name: "RGB-лампа ColorFest",
+                price: 1790,
+                image: "lamp11.png",
+                description: "16 цветовых режимов, управление через приложение."
+            },
+            {
+                id: 12,
+                name: "Лампа-бра Vintage",
+                price: 2100,
+                image: "lamp12.png",
+                description: "Классический дизайн для настенного монтажа."
+            },
+            {
+                id: 13,
+                name: "Лампа-плафон Origami",
+                price: 950,
+                image: "lamp1.png",
+                description: "Современный дизайн в стиле оригами."
+            },
+            {
+                id: 14,
+                name: "Ультратонкая панель UltraSlim",
+                price: 3650,
+                image: "lamp14.png",
+                description: "Современная LED-панель толщиной 1.5 см."
+            },
+            {
+                id: 15,
+                name: "Лампа-гирлянда Fairy",
+                price: 450,
+                image: "lamp15.png",
+                description: "Гибкая гирлянда с 24 светодиодами, длина 3м."
+            },
+            {
+                id: 16,
+                name: "Лампа-проектор Galaxy",
+                price: 2890,
+                image: "lamp16.png",
+                description: "Проецирует звездное небо на потолок и стены."
+            },
+            {
+                id: 17,
+                name: "Антикварная лампа Retro",
+                price: 4200,
+                image: "lamp17.png",
+                description: "Ручная работа, кованый металл, стиль начала XX века."
+            },
+            {
+                id: 18,
+                name: "Лампа-торшер Modern",
+                price: 5340,
+                image: "lamp18.png",
+                description: "Напольный светильник с регулируемой высотой."
+            },
+            {
+                id: 19,
+                name: "Солнечная лампа EcoSun",
+                price: 1890,
+                image: "lamp19.png",
+                description: "Работает от солнечной батареи, автоматическое включение ночью."
+            },
+            {
+                id: 20,
+                name: "Лампа для чтения BookLight",
+                price: 680,
+                image: "lamp20.png",
+                description: "Гибкий кронштейн, регулируемая яркость, защита глаз."
+            }
+        ];
+
+        // Инициализация корзины
+        let cart = JSON.parse(localStorage.getItem('cart')) || {};
+
+        // Функция обновления счетчика корзины
+        function updateCartCount() {
+            const total = Object.values(cart).reduce((sum, count) => sum + count, 0);
+            document.querySelectorAll('.cart-count').forEach(el => el.textContent = total);
+        }
+
+        // Генерация карточек товаров
+        function generateProductCards() {
+            const container = document.getElementById('products-container');
+            container.innerHTML = products.map(product => `
+                <div class="product-card" data-product-id="${product.id}">
+                    <a href="product.html?id=${product.id}" class="product-image-link">
+                        <img src="img/${product.image}" alt="${product.name}" class="product-image">
+                    </a>
+                    <div class="product-info">
+                        <h3 class="product-title">${product.name}</h3>
+                        <p class="product-price">${product.price} ₽</p>
+                        <div class="cart-controls">
+                            <button class="add-to-cart">В корзину</button>
+                            <div class="quantity-container">
+                                <div class="quantity-controls">
+                                    <button class="quantity-btn minus">-</button>
+                                    <span class="product-count">0</span>
+                                    <button class="quantity-btn plus">+</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            `).join('');
+        }
+
+        // Обработчик событий для всей страницы
+        function handleCartActions(e) {
+            const card = e.target.closest('.product-card');
+            if (!card) return;
+
+            const productId = card.dataset.productId;
+
+            if (e.target.classList.contains('add-to-cart')) {
+                cart[productId] = (cart[productId] || 0) + 1;
+                e.target.style.display = 'none';
+                card.querySelector('.quantity-container').style.display = 'flex';
+                localStorage.setItem('cart', JSON.stringify(cart));
+                updateCartCount();
+                card.querySelector('.product-count').textContent = cart[productId];
+            }
+
+            if (e.target.classList.contains('quantity-btn')) {
+                if (e.target.classList.contains('plus')) {
+                    cart[productId]++;
+                } else {
+                    cart[productId] = Math.max(0, cart[productId] - 1);
+                }
+
+                if (cart[productId] === 0) {
+                    card.querySelector('.add-to-cart').style.display = 'block';
+                    card.querySelector('.quantity-container').style.display = 'none';
+                    delete cart[productId];
+                }
+
+                card.querySelector('.product-count').textContent = cart[productId];
+                localStorage.setItem('cart', JSON.stringify(cart));
+                updateCartCount();
+            }
+        }
+
+        // Инициализация
+        document.addEventListener('DOMContentLoaded', () => {
+            generateProductCards();
+            updateCartCount();
+            
+            // Восстановление состояния корзины
+            products.forEach(product => {
+                const card = document.querySelector(`[data-product-id="${product.id}"]`);
+                if (card && cart[product.id] > 0) {
+                    card.querySelector('.add-to-cart').style.display = 'none';
+                    card.querySelector('.quantity-container').style.display = 'flex';
+                    card.querySelector('.product-count').textContent = cart[product.id];
+                }
+            });
+
+            // Подключение обработчика
+            document.addEventListener('click', handleCartActions);
+        });
+    </script>
 </body>
 </html>
